--- a/main.css
+++ b/main.css
@@ -11,16 +11,22 @@ body {
 }
 .container {
   margin-top: 2rem;
-  width: 50%;
+  width: 100%;
   background: whitesmoke;
+  display: flex;
+  justify-content: center;
 }
-.container2{
+.container2 {
   margin-top: 2rem;
-  width: 70%;
+  width: 100%;
   background: whitesmoke;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;  
+  justify-content: space-evenly;
+}
+.container2_heading {
+  text-align: center;
+  margin: 2rem;
 }
 .title {
   font-size: 2.5rem;
@@ -35,11 +41,20 @@ body {
   margin: 1rem auto 2rem 0;
   font-weight: bold;
 }
-.btn:hover{
-    background: rgb(233, 118, 51);
-    color: white;
+.btn:hover {
+  background: rgb(233, 118, 51);
+  color: white;
+}
+.card {
+  width: 60%;
+  grid-auto-flow: column;
+  grid-template-columns: 90% 10%;
+  border: 2px solid rgb(233, 118, 51);
+  padding: 2rem;
+  display: none;
 }
 .save {
+  width: 50%;
   margin-bottom: 0;
   border: 2px solid green;
   color: green;
@@ -48,17 +63,13 @@ body {
   background: green;
   color: white;
 }
-.card {
-  width: 80%;
-  grid-auto-flow: column;
-  grid-template-columns: 90% 10%;
-  border: 2px solid rgb(233, 118, 51);
-  padding: 2rem;
-  display: none; 
-}
 .fa {
-  color: rgb(233, 118, 51);
-  font-size: 1.5rem;
+  color: white;
+  font-size: 1rem;
+  border: 2px solid rgb(233, 118, 51);
+  padding:0.5rem;
+  text-decoration: none;
+  background-color: red;
 }
 .header {
   align-self: flex-start;
@@ -78,7 +89,11 @@ body {
   margin: 1rem auto 1rem auto;
 }
 #answer,
-#question {
+#question,
+#option-1,
+#option-2,
+#option-3,
+#option-4 {
   margin-top: 1rem;
   width: 105%;
   height: 6rem;
@@ -87,8 +102,15 @@ body {
   padding-left: 0.5rem;
   padding-top: 0.25rem;
 }
+#option-1,
+#option-2,
+#option-3,
+#option-4 {
+  height: 3rem;
+}
 .question-label,
-.answer-label {
+.answer-label,
+.option-label {
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -96,6 +118,7 @@ body {
   margin: 2rem 0 1rem 0;
   border: 2px solid rgb(233, 118, 51);
   width: 35%;
+  /* max-width: 100%; */
   padding: 1rem;
   align-self: center;
 }
@@ -135,14 +158,25 @@ body {
   background: rgb(233, 118, 51);
   color: white;
 }
-.ansHide{
+.ansHide {
   display: none;
 }
 .show {
   display: grid;
 }
-.showItem{
+.showItem {
   display: block;
+}
+.display-option {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.display-option div {
+  width: 45%;
+  margin: 5px;
+  border: 2px solid rgb(233, 118, 51);
+  padding: 2px;
 }
 @media screen and (max-width: 558px) {
   .card {
@@ -154,6 +188,9 @@ body {
     width: 90%;
   }
   .container {
+    width: 100%;
+  }
+  .container2 {
     width: 100%;
   }
 }
